test prod bundle with Grid part name generator

--- a/frontend/themes/my-theme/styles.css
+++ b/frontend/themes/my-theme/styles.css
@@ -16,4 +16,7 @@ vaadin-text-field.bordered::part(input-field) {
   background-color: var(--lumo-base-color);
 }
 
-
+vaadin-grid::part(mycustompart) {
+  font-weight: bold;
+  color: red;
+}
